--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>
-						About Me
+						About Me<span style="font-size:xx-small; color:blue;"> (Last Update on: 29/11/2016)</span> 
 					</h2>
 					</p>
 						I am a software developer at Infosy Ltd. from last 2.8 year.</br>
@@ -66,7 +66,7 @@
 						This allow my client to expand its business more and more in future to add more agent and expand the business.</br>
 						I am also a quick learner and eager to learn more and more technologies.</br>
 						The technologies I know till now are:
-						COBOL, JCL, CICS, PHP, MYSQL, PYTHON, DJANGO, HTML, CSS, JAVASCRIPT, ANGUJARJS, BOOTSTRAP, SHAREPOINT
+						COBOL, JCL, CICS, PHP, MYSQL, PYTHON, DJANGO, HTML, CSS, JAVASCRIPT, ANGUJARJS, BOOTSTRAP, SHAREPOINT	and list will keep increase in future.
 						
 					</P>
 					
