first page update

--- a/index.html
+++ b/index.html
@@ -58,20 +58,19 @@
 				</div>
 				<div class="col-md-8">
 					<h2>
-						About Me<span style="font-size:xx-small; color:blue;"> (Last Update on: 29/11/2016)</span> 
+						About Me<span style="font-size:xx-small; color:blue;"> (Last Update on: 23/6/2017)</span> 
 					</h2>
 					</p>
-						I am a software developer at Infosy Ltd. from last 2.8 year.</br>
-						I am working as a Mainframe Developer and working in the same the project since 2014. This project is a online real time payment portal for internal employees and also provide webservice base services.</br>
-						This allow my client to expand its business more and more in future to add more agent and expand the business.</br>
-						I am also a quick learner and eager to learn more and more technologies.</br>
-						The technologies I know till now are:
-						COBOL, JCL, CICS, PHP, MYSQL, PYTHON, DJANGO, HTML, CSS, JAVASCRIPT, ANGUJARJS, BOOTSTRAP, SHAREPOINT	and list will keep increase in future.
+						Mainframe Developer in <a href="https://www.infosys.com/" target=_blank>Infosys Ltd.<a> with 3.4 year of experience.</br>
+						<p>I am also a technology enthusiastic, eager to learn new things. </p>
+						<h3>There is no boundry to learn, unless to loose interest</h3>
+						The technologies I know so far:
+						COBOL, JCL, CICS, PHP, MYSQL, PYTHON, DJANGO, HTML, CSS, JAVASCRIPT, ANGUJARJS, BOOTSTRAP, SHAREPOINT and go on....
 						
 					</P>
 					
 					<div>
-						You can download my resume by clicking any of the below button:
+						If you wanna hire me, click any of the below button of your choice :) :
 						<section class="row">
 							<div class="col-md-6">
 								<a href="document/resume.pdf" download="Rajesh_resume.pdf">
