first page update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						About Me<span style="font-size:xx-small; color:blue;"> (Last Update on: 23/6/2017)</span> 
 					</h2>
 					</p>
-						Mainframe Developer in <a href="https://www.infosys.com/" target=_blank>Infosys Ltd.<a> with 3.4 year of experience.</br>
+						Mainframe Developer in <a href="https://www.infosys.com/" target=_blank>Infosys Ltd.</a> with 3.4 year of experience.</br>
 						<p>I am also a technology enthusiastic, eager to learn new things. </p>
 						<h3>There is no boundry to learn, unless to loose interest</h3>
 						The technologies I know so far:
