first page update

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 					</h2>
 					</p>
 						Mainframe Developer in <a href="https://www.infosys.com/" target=_blank>Infosys Ltd.</a> with 3.4 year of experience.</br>
-						<p>I am also a technology enthusiastic, eager to learn new things. </p>
-						<h3>There is no boundry to learn, unless to loose interest</h3>
-						The technologies I know so far:
+						<p>I am a technology enthusiastic, eager to learn new things. </p>
+						<h3>There is no boundry in learning new things, unless you loose interest..</h3>
+						Technologies I know so far:</br>
 						COBOL, JCL, CICS, PHP, MYSQL, PYTHON, DJANGO, HTML, CSS, JAVASCRIPT, ANGUJARJS, BOOTSTRAP, SHAREPOINT and go on....
 						
 					</P>
 					
 					<div>
-						If you wanna hire me, click any of the below button of your choice :) :
+						If you wanna hire me, click any of the below button of your choice  :
 						<section class="row">
 							<div class="col-md-6">
 								<a href="document/resume.pdf" download="Rajesh_resume.pdf">
