first page update

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 					<h2>
 						About Me<span style="font-size:xx-small; color:blue;"> (Last Update on: 23/6/2017)</span> 
 					</h2>
-					</p>
+					<p>
 						Mainframe Developer in <a href="https://www.infosys.com/" target=_blank>Infosys Ltd.</a> with 3.4 year of experience.</br>
-						<p>I am a technology enthusiastic, eager to learn new things. </p>
+						I am a technology enthusiastic, eager to learn new things. 
 						<h3>There is no boundry in learning new things, unless you loose interest..</h3>
 						Technologies I know so far:</br>
 						COBOL, JCL, CICS, PHP, MYSQL, PYTHON, DJANGO, HTML, CSS, JAVASCRIPT, ANGUJARJS, BOOTSTRAP, SHAREPOINT and go on....
 						
-					</P>
+					</p>
 					
 					<div>
 						If you wanna hire me, click any of the below button of your choice  :
