--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div class="col-md-6">
 						<h2>{{contactInfo.name}}</h2>
 						<a href="mailto:{{contactInfo.Email1}}">{{contactInfo.Email1}}</a></br>
-						<a href="mailto:{{contactInfo.Email2}}">{{contactInfo.Email2}}</a>
+						<!--<a href="mailto:{{contactInfo.Email2}}">{{contactInfo.Email2}}</a> -->
 					</div>
 					<div class="col-md-6 text-right">
 						<h4>Mob: {{contactInfo.Mob1}}</h4>
