--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					</div>
 					<div class="col-md-6 text-right">
 						<h4>Mob: {{contactInfo.Mob1}}</h4>
-						<h4>{{contactInfo.Mob2}}</h4>
+						<!--<h4>{{contactInfo.Mob2}}</h4>-->
 					</div>
 				</div>
 			</section>
