--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<!--<a href="mailto:{{contactInfo.Email2}}">{{contactInfo.Email2}}</a> -->
 					</div>
 					<div class="col-md-6 text-right">
-						<h4>Mob: {{contactInfo.Mob1}}</h4>
+						<h4 class="mob-no">Mob: {{contactInfo.Mob1}}</h4>
 						<!--<h4>{{contactInfo.Mob2}}</h4>-->
 					</div>
 				</div>
